# easy-client

./: .gitignore  README.md  TODO.md  pyproject.toml
datamining/: __init__.py
datamining/inspect/: __init__.py
easy_client/: __init__.py  cli.py  structure.yaml  types.py
easy_client/builders/: __init__.py  buildersABC.py  client_builder.py  elric.py  meta_files.py  project_builder.py  schema_builder.py  structure.py  validator.py
easy_client/commands/: __init__.py  commands.py  create.py  fetch.py  schema.py  utils.py  validate.py
easy_client/src/: __init__.py  fetcher.py
easy_client/templates/: README.md.j2  config.py.j2  fetcher.py.j2  params.py.j2
easy_client/utils/: __init__.py  loader.py  struct.py  structure.py
exmple_api/: config.py
exmple_api/exmple_api/: fetcher.py
placeholder/placeholder/: config.py
placeholder/placeholder/client/fetch/: fetcher.py  params.py
placeholder/placeholder/client/validate/: __init__.py  albums.py  comments.py  photos.py  posts.py  todos.py  users.py
test_nw/test_nw/: config.py
test_nw/test_nw/client/fetch/: fetcher.py  params.py
tests/: test_api.py
tests/test_data/: validator.json  validator_model.py
tests/test_data/utils/: test_loader.py
